# AutoThesis

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
prompts/: critic.md  evaluator.md  planner.md  preliminary_thesis.md  reader.md  scanner_signal.md  search_query_writer.md  synthesizer.md
sql/: seed_sp500.sql
sql/migrations/: 0001_init.sql  0002_add_comparisons.sql  0003_add_bookmarks_and_annotations.sql  0004_add_batch_jobs_and_run_templates.sql  0005_add_watchlists.sql  0006_add_thesis_alerts.sql  0007_add_scanner.sql  0008_add_multi_model.sql  0009_add_performance_tracking.sql  0010_add_evidence_quality.sql  0011_add_historical_analytics.sql  0012_add_scheduled_refresh.sql  0013_add_portfolios.sql  0014_add_performance_indexes.sql  0015_scheduler_hardening.sql
src/: app_state.rs  cancellation.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  markdown.rs  models.rs  status.rs  utils.rs
src/db/: batches.rs  bookmarks.rs  comparisons.rs  llm.rs  mod.rs  portfolios.rs  prices.rs  research.rs  run_templates.rs  runs.rs  scanner.rs  scheduled_runs.rs  search.rs  source_quality.rs  thesis.rs  ticker_universe.rs  watchlists.rs
src/providers/: claude.rs  fetch.rs  gemini.rs  llm.rs  mod.rs  ollama.rs  openai.rs  price.rs  search.rs  tavily.rs
static/: styles.css
templates/: batch.html  batches.html  bookmarks.html  comparison.html  comparisons.html  dashboard.html  index.html  iteration.html  layout.html  portfolio.html  portfolios.html  run.html  run_templates.html  scanner.html  scanner_opportunity.html
tests/: app.rs
(+33 files in other folders)
