[package]
name = "autothesis"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[dependencies]
ammonia = "=3.3.0"
anyhow = "1"
askama = "0.12"
async-trait = "0.1"
axum = { version = "0.7", features = ["json", "macros"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
dotenvy = "0.15"
http = "1"
pulldown-cmark = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "=0.31.0", features = ["bundled", "chrono"] }
scraper = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "=1.8.0", features = ["serde", "v4"] }
url = "=2.4.1"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "=3.10.1"
tower = "0.5"
